<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TambahTugasActivity">

    <FrameLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/biru_primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/back"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back"
            android:layout_gravity="start|center"
            android:layout_width="12dp"
            android:layout_height="match_parent"/>
    </FrameLayout>
    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:scrollbarSize="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:paddingStart="@dimen/marginStartEnd"
            android:paddingEnd="@dimen/marginStartEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/kategoriTugas"
                android:textColor="@color/black"
                android:textSize="@dimen/judulText"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="@dimen/marginTopBot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/kategori_tugas"
                style="@style/ExposedDropdownMenuBlue"
                android:layout_marginTop="@dimen/marginTopM"
                app:boxBackgroundColor="@null"
                app:hintEnabled="false"
                app:boxStrokeColor="@color/biru_primary"
                android:hint="@string/kategoriTugas"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textHeight">
                <AutoCompleteTextView
                    android:id="@+id/dropdown_menu"
                    android:inputType="none"
                    android:textSize="@dimen/normalText"
                    android:hint="@string/kategoriTugas"
                    android:textColor="@color/black"
                    android:maxLines="1"
                    android:ellipsize="end"
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:text="@string/judulTugas"
                android:textColor="@color/black"
                android:textSize="@dimen/judulText"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="@dimen/marginTopBot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/judul_tugas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/textHeight"
                android:layout_marginTop="@dimen/marginTopM"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/roboto"
                android:gravity="center|start"
                android:hint="@string/masukkanJudulTugas"
                android:padding="@dimen/adapterPadding"
                android:textColor="@color/black"
                android:textSize="@dimen/normalText" />

            <TextView
                android:text="@string/isiTugas"
                android:textColor="@color/black"
                android:textSize="@dimen/judulText"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="@dimen/marginTopBot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/isi_tugas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/minHeightInputText"
                android:background="@drawable/rounded_edittext"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:hint="@string/masukkanIsiTugas"
                android:padding="@dimen/adapterPadding"
                android:gravity="top|start"
                android:layout_marginTop="@dimen/marginTopM"
                android:textSize="@dimen/normalText" />
            <Button
                android:id="@+id/btn_simpan"
                android:text="@string/simpan"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/buttonText"
                android:background="@drawable/rounded_button"
                android:layout_marginTop="@dimen/marginTopBot"
                android:layout_marginBottom="@dimen/marginTopBot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </ScrollView>


    <TextView
        android:layout_gravity="center|top"
        android:text="@string/tambahTugas"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/h6"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>