<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailTugasFragment">

    <FrameLayout
        android:padding="10dp"
        android:orientation="horizontal"
        android:background="@color/biru_primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">
        <ImageView
            android:id="@+id/back"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_back"
            android:layout_gravity="start|center"
            android:layout_width="12dp"
            android:layout_height="match_parent"/>
    </FrameLayout>
    <ScrollView
        android:layout_marginTop="?attr/actionBarSize"
        android:scrollbarSize="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_marginStart="@dimen/marginStartEnd"
            android:layout_marginEnd="@dimen/marginStartEnd"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/kategoriTugas"
                android:textColor="@color/black"
                android:textSize="@dimen/judulText"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="@dimen/marginTopBot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/kategori_tugas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/textHeight"
                android:layout_marginTop="@dimen/marginTopM"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/roboto"
                android:gravity="center|start"
                android:padding="@dimen/adapterPadding"
                android:textColor="@color/black"
                android:textSize="@dimen/normalText"
                android:singleLine="true" />
            <TextView
            android:text="@string/judulTugas"
            android:textColor="@color/black"
            android:textSize="@dimen/judulText"
            android:maxLines="1"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="@dimen/marginTopBot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/judul_tugas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/textHeight"
                android:justificationMode="inter_word"
                android:layout_marginTop="@dimen/marginTopM"
                android:background="@drawable/rounded_edittext"
                android:fontFamily="@font/roboto"
                android:gravity="center|start"
                android:padding="@dimen/adapterPadding"
                android:textColor="@color/black"
                android:textSize="@dimen/normalText"
                android:singleLine="true" />

            <TextView
                android:text="@string/isiTugas"
                android:textColor="@color/black"
                android:textSize="@dimen/judulText"
                android:maxLines="1"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginTop="@dimen/marginTopBot"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:id="@+id/isi_tugas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/minHeightInputText"
                android:justificationMode="inter_word"
                android:background="@drawable/rounded_edittext"
                android:textColor="@color/black"
                android:fontFamily="@font/roboto"
                android:padding="@dimen/adapterPadding"
                android:gravity="top|start"
                android:layout_marginTop="@dimen/marginTopM"
                android:textSize="@dimen/normalText" />
            <Button
                android:id="@+id/btn_selesai"
                android:layout_marginTop="@dimen/marginTopBot"
                android:layout_marginBottom="@dimen/marginTopBot"
                android:text="@string/selesai"
                android:textAllCaps="false"
                android:background="@drawable/rounded_button"
                android:textSize="@dimen/buttonText"
                android:fontFamily="@font/roboto_bold"
                android:layout_width="match_parent"
                android:layout_height="@dimen/buttonHeight"/>

        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_gravity="center|top"
        android:text="@string/detailTugas"
        android:fontFamily="@font/roboto_bold"
        android:textSize="@dimen/h6"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"/>
</androidx.coordinatorlayout.widget.CoordinatorLayout>