<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.HomeFragment">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_marginTop="@dimen/marginTopBot"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/anims"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="top"
                android:layout_marginStart="@dimen/marginStartEnd"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:scaleType="centerCrop"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/anim_lvl1" />
            <TextView
                android:id="@+id/jumlah_tugas"
                android:text="@string/loremipsum"
                android:gravity="center|start"
                android:maxLines="2"
                android:textColor="@color/white"
                android:fontFamily="@font/roboto"
                android:textSize="@dimen/normalText"
                android:paddingStart="20dp"
                android:paddingEnd="16dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:justificationMode="inter_word"
                android:ellipsize="end"
                android:layout_marginEnd="@dimen/marginStartEnd"
                android:background="@drawable/chat_bubble"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <TextView
            android:text="@string/daftar_tugas_kamu"
            android:textColor="@color/black"
            android:textSize="@dimen/judulText"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginEnd="@dimen/marginStartEnd"
            android:layout_marginStart="@dimen/marginStartEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="10dp"
            android:visibility="gone"
            android:id="@+id/tugasRecycle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="@dimen/marginStartEnd"
            android:paddingStart="@dimen/marginStartEnd"
            android:paddingBottom="@dimen/buttonHeight"
            android:clipToPadding="false"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            tools:listitem="@layout/adapter_tugas" />
    </LinearLayout>
    <LinearLayout
        android:visibility="visible"
        android:id="@+id/tugasKosong"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/anim"
            android:layout_width="250dp"
            android:layout_height="220dp"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerCrop"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/anim_sleep" />
        <TextView
            android:text="@string/tugasKosong"
            android:layout_marginTop="-50dp"
            android:gravity="center"
            android:textSize="@dimen/h6"
            android:textColor="@color/biru_primary"
            android:fontFamily="@font/roboto_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>